--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".LogSign.LoginActivity" />
+        <activity android:name=".LogSign.SignupActivity" />
+        <activity
+            android:name=".activities.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogSign.LoginActivity" />
-        <activity android:name=".LogSign.SignupActivity"></activity>
+        <activity
+            android:name=".activities.DescriptionActivity"
+            android:label="@string/title_activity_description"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
