--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.MainActivity"></activity>
-        <activity android:name=".LogSign.LoginActivity" />
-        <activity android:name=".LogSign.SignupActivity" />
+        <activity android:name=".Login.LoginActivity" />
+        <activity android:name=".Login.SignupActivity" />
         <activity
             android:name=".activities.HomeActivity"
             android:label="@string/title_activity_home"
@@ -28,8 +28,6 @@
             android:label="@string/title_activity_description"
             android:theme="@style/AppTheme"></activity>
 
-        <activity android:name=".Login.LoginActivity" />
-        <activity android:name=".Login.SignupActivity"></activity>
 
     </application>
 
