--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".activities.MainActivity" />
         <activity android:name=".LogSign.LoginActivity" />
         <activity android:name=".LogSign.SignupActivity" />
         <activity
@@ -22,15 +22,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.DescriptionActivity"
             android:label="@string/title_activity_description"
-            android:theme="@style/AppTheme"></activity>
-
+            android:theme="@style/AppTheme" />
         <activity android:name=".Login.LoginActivity" />
-        <activity android:name=".Login.SignupActivity"></activity>
-
+        <activity android:name=".Login.SignupActivity" />
+        <activity
+            android:name=".activities.OrgoActivity"
+            android:label="@string/title_activity_orgo"
+            android:parentActivityName=".activities.HomeActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.teamnotfoundexception.impetus.activities.HomeActivity" />
+        </activity>
     </application>
 
 </manifest>
