--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@drawable/whatshot"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity" >
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +22,7 @@
         <activity android:name=".activities.HomeActivity" />
         <activity
             android:name=".LogSign.LoginActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".activities.OrgoActivity"
             android:parentActivityName=".activities.HomeActivity"
@@ -39,7 +37,13 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".LogSign.OrganizerLoginActivity" />
         <activity android:name=".activities.SearchActivity" />
-        <receiver android:name=".services.Notifier"/>
+
+        <receiver android:name=".services.Notifier" />
+
+        <activity
+            android:name=".tutorial.TutorialActivity"
+            android:label="@string/title_activity_tutorial"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
